[package]
name = "rdbg-client"
version = "0.1.2"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The client library for rdbg"
repository = "https://github.com/nu11ptr/rdbg/tree/main/rdbg-client"
documentation = "https://docs.rs/rdbg-client"
keywords = ["debug", "debugger", "development"]
categories = ["development-tools::debugging"]
readme = "README.md"
edition = "2021"

[dev-dependencies]
rdbg = { path = "../rdbg", version = "0.1.2" }
