[package]
name = "rdbg"
version = "0.1.3"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Quick and dirty Rust remote debugging"
repository = "https://github.com/nu11ptr/rdbg/tree/main/rdbg"
documentation = "https://docs.rs/rdbg"
keywords = ["debug", "debugger", "development"]
categories = ["development-tools::debugging"]
readme = "README.md"
edition = "2021"

[features]
default = ["enabled"]
enabled = []
insecure-remote = []
